src/main/java/PseudocodePaper2Parser.java
// Generated from /Users/zhong/IdeaProjects/PseudocodeTranspiler/src/main/java/PseudocodePaper2.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PseudocodePaper2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DCL=1, ASN=2, CST=3, INT=4, REL=5, STR=6, CHR=7, BOL=8, ARR=9, RCD=10, 
		ERC=11, ADD=12, MIN=13, MUL=14, MOD=15, EXP=16, DIV=17, CCN=18, AND=19, 
		ORR=20, NOT=21, EQS=22, NEQ=23, GRT=24, LSS=25, GOE=26, LOE=27, RPT=28, 
		UTL=29, FOR=30, FTO=31, STP=32, NXT=33, WHL=34, EWH=35, WDO=36, IIF=37, 
		THN=38, EIF=39, ELS=40, EDF=41, CSE=42, OFF=43, OTW=44, ECS=45, FTN=46, 
		EFT=47, RTT=48, RTN=49, PCD=50, EPC=51, BRF=52, OPF=53, WRT=54, RED=55, 
		APD=56, WRF=57, RDF=58, CLF=59, LPR=60, RPR=61, CMA=62, DOT=63, COL=64, 
		LBR=65, RBR=66, INP=67, OUP=68, CHAR_Literal=69, STRING_Literal=70, ESCAPE_SEQUENCE=71, 
		Literal=72, IntegerLiteral=73, RealLiteral=74, BooleanLiteral=75, CharLiteral=76, 
		Identifier=77, WS=78, COMMENT=79, LINE_COMMENT=80;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_primaryExpression = 2, RULE_arrayExpression = 3, 
		RULE_recordExpression = 4, RULE_binaryOp = 5, RULE_statement = 6, RULE_outputStatement = 7, 
		RULE_inputStatement = 8, RULE_variableDeclaration = 9, RULE_recordVarDeclaration = 10, 
		RULE_constDeclaration = 11, RULE_parameter = 12, RULE_parameters = 13, 
		RULE_functionDeclaration = 14, RULE_procedureDeclaration = 15, RULE_oneDArrayDeclaration = 16, 
		RULE_twoDArrayDeclaration = 17, RULE_assignment = 18, RULE_whileStatement = 19, 
		RULE_repeatStatement = 20, RULE_recordDeclaration = 21, RULE_forStatement = 22, 
		RULE_elseIfExpression = 23, RULE_elseExpression = 24, RULE_ifStatement = 25, 
		RULE_switchStatement = 26, RULE_switchTerm = 27, RULE_otherwiseExpression = 28, 
		RULE_returnStatement = 29, RULE_fileOpen = 30, RULE_fileClose = 31, RULE_readFile = 32, 
		RULE_writeFile = 33, RULE_functionCall = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "primaryExpression", "arrayExpression", "recordExpression", 
			"binaryOp", "statement", "outputStatement", "inputStatement", "variableDeclaration", 
			"recordVarDeclaration", "constDeclaration", "parameter", "parameters", 
			"functionDeclaration", "procedureDeclaration", "oneDArrayDeclaration", 
			"twoDArrayDeclaration", "assignment", "whileStatement", "repeatStatement", 
			"recordDeclaration", "forStatement", "elseIfExpression", "elseExpression", 
			"ifStatement", "switchStatement", "switchTerm", "otherwiseExpression", 
			"returnStatement", "fileOpen", "fileClose", "readFile", "writeFile", 
			"functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DECLARE'", "'<-'", "'CONST'", "'INTEGER'", "'REAL'", "'STRING'", 
			"'CHAR'", "'BOOLEAN'", "'ARRAY'", "'TYPE'", "'ENDTYPE'", "'+'", "'-'", 
			"'*'", "'MOD'", "'^'", null, "'&'", "'AND'", "'OR'", "'NOT'", "'='", 
			"'<>'", "'>'", "'<'", "'>='", "'<='", "'REPEAT'", "'UNTIL'", "'FOR'", 
			"'TO'", "'STEP'", "'NEXT'", "'WHILE'", "'ENDWHILE'", "'DO'", "'IF'", 
			"'THEN'", "'ELSE IF'", "'ELSE'", "'ENDIF'", "'CASE'", "'OF'", "'OTHERWISE'", 
			"'ENDCASE'", "'FUNCTION'", "'ENDFUNCTION'", "'RETURNS'", "'RETURN'", 
			"'PROCEDURE'", "'ENDPROCEDURE'", "'BYREF'", "'OPENFILE'", "'WRITE'", 
			"'READ'", "'APPEND'", "'WRITEFILE'", "'READFILE'", "'CLOSEFILE'", "'('", 
			"')'", "','", "'.'", "':'", "'['", "']'", "'INPUT'", "'OUTPUT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DCL", "ASN", "CST", "INT", "REL", "STR", "CHR", "BOL", "ARR", 
			"RCD", "ERC", "ADD", "MIN", "MUL", "MOD", "EXP", "DIV", "CCN", "AND", 
			"ORR", "NOT", "EQS", "NEQ", "GRT", "LSS", "GOE", "LOE", "RPT", "UTL", 
			"FOR", "FTO", "STP", "NXT", "WHL", "EWH", "WDO", "IIF", "THN", "EIF", 
			"ELS", "EDF", "CSE", "OFF", "OTW", "ECS", "FTN", "EFT", "RTT", "RTN", 
			"PCD", "EPC", "BRF", "OPF", "WRT", "RED", "APD", "WRF", "RDF", "CLF", 
			"LPR", "RPR", "CMA", "DOT", "COL", "LBR", "RBR", "INP", "OUP", "CHAR_Literal", 
			"STRING_Literal", "ESCAPE_SEQUENCE", "Literal", "IntegerLiteral", "RealLiteral", 
			"BooleanLiteral", "CharLiteral", "Identifier", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudocodePaper2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudocodePaper2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PseudocodePaper2Parser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2172498793004532746L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 1071L) != 0)) {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<PrimaryExpressionContext> primaryExpression() {
			return getRuleContexts(PrimaryExpressionContext.class);
		}
		public PrimaryExpressionContext primaryExpression(int i) {
			return getRuleContext(PrimaryExpressionContext.class,i);
		}
		public List<BinaryOpContext> binaryOp() {
			return getRuleContexts(BinaryOpContext.class);
		}
		public BinaryOpContext binaryOp(int i) {
			return getRuleContext(BinaryOpContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			primaryExpression();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 266334208L) != 0)) {
				{
				{
				setState(79);
				binaryOp();
				setState(80);
				primaryExpression();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(PseudocodePaper2Parser.Identifier, 0); }
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public TerminalNode STRING_Literal() { return getToken(PseudocodePaper2Parser.STRING_Literal, 0); }
		public TerminalNode CHAR_Literal() { return getToken(PseudocodePaper2Parser.CHAR_Literal, 0); }
		public TerminalNode Literal() { return getToken(PseudocodePaper2Parser.Literal, 0); }
		public RecordExpressionContext recordExpression() {
			return getRuleContext(RecordExpressionContext.class,0);
		}
		public ArrayExpressionContext arrayExpression() {
			return getRuleContext(ArrayExpressionContext.class,0);
		}
		public TerminalNode LPR() { return getToken(PseudocodePaper2Parser.LPR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPR() { return getToken(PseudocodePaper2Parser.RPR, 0); }
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitPrimaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primaryExpression);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				functionCall();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(STRING_Literal);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				match(CHAR_Literal);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				match(Literal);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				recordExpression();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				arrayExpression();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				{
				setState(94);
				match(LPR);
				setState(95);
				expression();
				setState(96);
				match(RPR);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(PseudocodePaper2Parser.Identifier, 0); }
		public TerminalNode LBR() { return getToken(PseudocodePaper2Parser.LBR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RBR() { return getToken(PseudocodePaper2Parser.RBR, 0); }
		public TerminalNode CMA() { return getToken(PseudocodePaper2Parser.CMA, 0); }
		public ArrayExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitArrayExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayExpressionContext arrayExpression() throws RecognitionException {
		ArrayExpressionContext _localctx = new ArrayExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arrayExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(Identifier);
			setState(101);
			match(LBR);
			setState(102);
			expression();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CMA) {
				{
				setState(103);
				match(CMA);
				setState(104);
				expression();
				}
			}

			setState(107);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordExpressionContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(PseudocodePaper2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(PseudocodePaper2Parser.Identifier, i);
		}
		public TerminalNode DOT() { return getToken(PseudocodePaper2Parser.DOT, 0); }
		public RecordExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitRecordExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecordExpressionContext recordExpression() throws RecognitionException {
		RecordExpressionContext _localctx = new RecordExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_recordExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(Identifier);
			setState(110);
			match(DOT);
			setState(111);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BinaryOpContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(PseudocodePaper2Parser.ADD, 0); }
		public TerminalNode MIN() { return getToken(PseudocodePaper2Parser.MIN, 0); }
		public TerminalNode MOD() { return getToken(PseudocodePaper2Parser.MOD, 0); }
		public TerminalNode DIV() { return getToken(PseudocodePaper2Parser.DIV, 0); }
		public TerminalNode EXP() { return getToken(PseudocodePaper2Parser.EXP, 0); }
		public TerminalNode MUL() { return getToken(PseudocodePaper2Parser.MUL, 0); }
		public TerminalNode EQS() { return getToken(PseudocodePaper2Parser.EQS, 0); }
		public TerminalNode NEQ() { return getToken(PseudocodePaper2Parser.NEQ, 0); }
		public TerminalNode GRT() { return getToken(PseudocodePaper2Parser.GRT, 0); }
		public TerminalNode LSS() { return getToken(PseudocodePaper2Parser.LSS, 0); }
		public TerminalNode GOE() { return getToken(PseudocodePaper2Parser.GOE, 0); }
		public TerminalNode LOE() { return getToken(PseudocodePaper2Parser.LOE, 0); }
		public TerminalNode AND() { return getToken(PseudocodePaper2Parser.AND, 0); }
		public TerminalNode ORR() { return getToken(PseudocodePaper2Parser.ORR, 0); }
		public TerminalNode CCN() { return getToken(PseudocodePaper2Parser.CCN, 0); }
		public BinaryOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryOp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitBinaryOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryOpContext binaryOp() throws RecognitionException {
		BinaryOpContext _localctx = new BinaryOpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_binaryOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 266334208L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ProcedureDeclarationContext procedureDeclaration() {
			return getRuleContext(ProcedureDeclarationContext.class,0);
		}
		public OneDArrayDeclarationContext oneDArrayDeclaration() {
			return getRuleContext(OneDArrayDeclarationContext.class,0);
		}
		public TwoDArrayDeclarationContext twoDArrayDeclaration() {
			return getRuleContext(TwoDArrayDeclarationContext.class,0);
		}
		public RecordDeclarationContext recordDeclaration() {
			return getRuleContext(RecordDeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FileOpenContext fileOpen() {
			return getRuleContext(FileOpenContext.class,0);
		}
		public FileCloseContext fileClose() {
			return getRuleContext(FileCloseContext.class,0);
		}
		public ReadFileContext readFile() {
			return getRuleContext(ReadFileContext.class,0);
		}
		public WriteFileContext writeFile() {
			return getRuleContext(WriteFileContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public ConstDeclarationContext constDeclaration() {
			return getRuleContext(ConstDeclarationContext.class,0);
		}
		public RecordVarDeclarationContext recordVarDeclaration() {
			return getRuleContext(RecordVarDeclarationContext.class,0);
		}
		public OutputStatementContext outputStatement() {
			return getRuleContext(OutputStatementContext.class,0);
		}
		public InputStatementContext inputStatement() {
			return getRuleContext(InputStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudocodePaper2Visitor ) return ((PseudocodePaper2Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				functionDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				procedureDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				oneDArrayDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				twoDArrayDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(120);
				recordDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(121);
				assignment();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				whileStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(123);
				repeatStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(124);
				forStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(125);
				ifStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(126);
				switchStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(127);
				returnStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(128);
				fileOpen();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(129);
				fileClose();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(130);
				readFile();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(131);
				writeFile();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(132);
				functionCall();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(133);
				constDeclaration();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(134);
				recordVarDeclaration();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(135);
				outputStatement();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(136);
				inputStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
